--- a/project/home/static/css/styles.css
+++ b/project/home/static/css/styles.css
@@ -1,5 +1,26 @@
+.popular_repos {
+    padding: 0px;
+}
+
 .repo {
-    background-color: #ccc;
+    padding: 10px 10px 10px 0px;
+    margin: 5px;
+    border-bottom: 1px #e1e4e8 solid;
+}
+
+ul{
+    list-style-type: none;
+    padding: 0px;
+}
+
+.pagination-invisible{
+    display: none;
+}
+
+.repo-name{
+    font-size: 20px;
+    color: #0366d6;
+    font-weight: bold;
 }
 
 #custom-search-input {
@@ -9,34 +30,10 @@
 }
 
 #custom-search-input .search-query {
-    padding-right: 3px;
-    padding-right: 4px \9;
-    padding-left: 3px;
-    padding-left: 4px \9;
-    /* IE7-8 doesn't have border-radius, so don't indent the padding */
-
+    width: 70%;
+    margin-right: 10px;
     margin-bottom: 0;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-}
-
-#custom-search-input button {
-    border: 0;
-    background: none;
-    /** belows styles are working good */
-    padding: 2px 5px;
-    margin-top: 2px;
-    position: relative;
-    left: -28px;
-    /* IE7-8 doesn't have border-radius, so don't indent the padding */
-    margin-bottom: 0;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    color:#D9230F;
-}
-
-.search-query:focus + button {
-    z-index: 3;
 }
