--- a/project/repos/templates/repos/index.html
+++ b/project/repos/templates/repos/index.html
@@ -25,7 +25,7 @@
         </p>
 
         {% if file_contents %}
-            <div>
+            <div class="file-contents">
                 {{ file_contents | safe}}
             </div>
         {% else %}
